# adaptive-personal-syllabus

./: .adaptive_syllabus_docs_audit.db  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
data/: sample-learning-paths.json
docs/: Context-capture-and-analysis.md
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/aiChatsThread/: 01-onupaway-os-syllabuscritique-grok.md  10-GROKsUpdatedReadingList.md  11-recontextualize-gpt.md  12-deeperinsights-postrest-grok.md  13-grokFart.md  16.md  5-grokcontinues.md  7-bowout-claude.md  8-grokRespondsAndResponds.md  9-userChecksGROK.md  _gemini_visit_20260102.json
docs/implementation/: docs-audit-report.json  docs-audit-roadmap.md
docs/narrative-workbook/: A_ _ .. [ [ execution over concept[.md  Here are some structured writing exercises and activities that will….md  The Graphic Novel Writing Guide for Derek Inspiration, Structure….md  Writing Guide for Derek Structure, Exploration, and Momentum.md  📜 FINALIZED RULES FOR THE NAMING STRUCTURE & UNIVERSAL SYSTEM.md
docs/pitch/: index.html
docs/source-materials/: PROVENANCE.yaml
docs/syllabusEVOLUTION/: _gemini_visit_20260102.json  os-syllabus-v3-3.md
src/adaptive_personal_syllabus/: __init__.py  __main__.py  core.py  corpus.py  data_export.py  db_generator.py  docs_audit.py  generator.py  hooks.py  (+4 more)
tests/: test_cli.py  test_cli_system.py  test_core.py  test_corpus.py  test_data_export.py  test_db_generator.py  test_docs_audit.py  test_docs_cli.py  test_ledger.py  test_planner.py
(+19 files in other folders)
